@@ -1,4 +1,4 @@
-parprouted, (C) 2004 Vladimir Ivaschenko <vi@maks.net>
+parprouted, (C) 2008 Vladimir Ivaschenko <vi@maks.net>
 -------------------------------------------------------
 
 1) Installation:
@@ -10,7 +10,7 @@ Manual can be found by typing "man parprouted".
 
 2) Contact/copyright:
 
-GPLv2, (C) 2002-2004, Vladimir Ivaschenko <vi@maks.net>
+GPLv2, (C) 2008, Vladimir Ivaschenko <vi@maks.net>
 
 3) Acknowledgements:
 
