@@ -1,3 +1,14 @@
+Wed 02 Jan 2008 12:12:51 AM EET
+parprouted 0.7:
+Many improvements/bug fixes to make parprouted handle mobile hosts moving 
+across Ethernet interfaces. Credit for most of the improvements goes to:
+Norbert Unterberg <Norbert.Unterberg@DBT.DE> and
+Christian Knecht <Christian.Knecht@DBT.DE>.
+
+Changes to make parprouted cross-compile on ARM, submitted by:
+Zhouzhi' <rising_o@msn.com>.
+
+------------------------------------------------------------------------
 Sun 26 Aug 2007 03:38:29 PM EEST
 parprouted 0.65:
 Fix a problem with incorrect handling of a case when there are two entries 
